<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contacts_rationale"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/holo_orange_light">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/contacts_rationale"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">
        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/button_contacts_rationale_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/button_contacts_rationale_cancel" />
        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/button_contacts_rationale_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/button_contacts_rationale_ok" />
    </LinearLayout>
</LinearLayout>